fix(user dropdown): fix wrong height

--- a/src/popup/pages/app-container/home/select-account-section/select-account-section.component.scss
+++ b/src/popup/pages/app-container/home/select-account-section/select-account-section.component.scss
@@ -48,5 +48,6 @@
   img {
     border-radius: 50%;
     width: 46px;
+    height: 46px;
   }
 }
